kubernetes/cart/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cart
  labels:
    app: cart-service
